--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "bootstrap": "^3.4.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "react-test-renderer": "^16.13.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
@@ -38,6 +41,8 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.6",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "prettier": "2.1.1"
   }
 }
