--- a/package.json
+++ b/package.json
@@ -47,10 +47,11 @@
     "@storybook/addon-actions": "^6.0.26",
     "@storybook/addon-essentials": "^6.0.26",
     "@storybook/addon-links": "^6.0.26",
+    "@storybook/addon-a11y": "^6.0.26",
     "@storybook/node-logger": "^6.0.26",
     "@storybook/preset-create-react-app": "^3.1.4",
-    "@storybook/react": "^6.0.26",
     "@types/enzyme": "^3.10.6",
+    "@storybook/react": "^6.0.26",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "babel-loader": "^8.1.0",
     "prettier": "2.1.1",
